src/objects/VWfPrcsC__c.object
<CustomObject>
    <fields>
        <fullName>Account_RM_Update_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls the automation which is triggered when the owner of an Account is updated. Currently the Process named Account RM Updated.</description>
        <label>Account RM Update Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Opportunity_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Opportunity Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OppInternalEmailDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Internal Emails Disabled</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Setting_Overview</fullName>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>NAME</columns>
        <columns>Account_RM_Update_Disabled__c</columns>
        <columns>All_Opportunity_Disabled__c</columns>
        <columns>OppInternalEmailDisabled__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Setting Overview</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>